style.css
/* ... */
/* Responsive Design */
@media (max-width: 768px) {

    .nav_links
    {
        font-family: 'Quicksand', serif;
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 0 20px;
        height: 50px;
        transition: all 0.3s;
        width: 100%;
    }
    
    .link_holder {
        display: none;
        flex-direction: column;
        position: absolute;
        top: 60px;
        right: 0;
        background-color: #333;
        width: 100%;
    }

    .link_holder.active {
        display: flex;
    }

    .hamburger {
        display: block;
    }

    #hamburger-icon
    {
        display: block;
        padding: 10px;
        background-color: #252422;
        color: #EB5E28;
    }


    #button_close, #button_ad_redirect
    {
        padding: 5px 10px;
        font-size: 1rem;
        width: max-content;
        margin: 10px 0;
    }

    #button_container
    {
        align-items: center;
        flex-direction: column;
    }


    #id_redirect
    {
        padding: 10px 15px;
        font-size: 1.2rem;
        margin-top: 20px;
        font-family: 'quicksand', serif;
    }

    .contact-heading
    {
        font-size: 1.2rem;
    }

    .contact_link
    {
        font-family: 'quicksand', serif;    
        padding: 15px 30px;
        font-size: 1.2rem;
        font-weight: bolder;
    }

    #message, #name, #email, #subject
    {
        font-size: 0.75rem;
    }

    .contact_labels
    {
        font-size: 1rem;
    }

    .title, .fa-film {
        font-size: 1.3rem;
    }

    .h1_movie_title, .h1_serie_title, #Ad_title {
        font-size: 2rem;
        margin: 15px 0;
    }

    .download_link, .buttons_div_button{
        font-size: 14px;
    }

    .buttons_div_button{
        font-size: 14px;
    }

    .link
    {
        margin: 0 20px 0 0;
    }


    /* Main section for all movies. */
    .line1
    {
        padding: 15px 0;
        margin: 0;
    }

    .main_home
    {
        padding: 0.5rem 1rem;   
    }

    /* Movie information */
    .movie_image_holder
    {
        width: 150px;
        margin: 0;
        padding: 0;
    }

    .movie_image
    {
        border-radius: 10px;
        width: 100%;
        height: 220px;
        transition: all 0.2s;
    }

    .movie_info
    {
        font-size: 0.75rem;
    }

    .movie_name
    {
        font-weight: bold;
        font-size: 1rem;
        margin: 10px 0;
    }

    .serie_button_class
    {
        font-size: 0.85rem;
    }
}



@media (min-width: 1200px) {
    header
    {
        height: 80px;
        padding: 40px;
    }

    .title, .logo
    {
        font-size: 2rem;
    }

    .nav_links
    {
        font-size: 1.2rem;
    }

    .h1_movie_title, .h1_serie_title, #Ad_title
     {
        font-size: 2.5rem;
        margin: 15px 0;
    }

    .download_link, .buttons_div_button {
        font-size: 18px;
    }

}

@media screen and (width >= 2000px)
{
    #Ad_State
    {
        margin-top: 300px;
        margin-bottom: 75px;
    }

    #id_redirect
    {
        padding: 20px 60px;
        font-size: 3rem;
        margin-top: 20px;
        font-family: 'quicksand', serif;
    }

    .contact_link
    {
        padding: 20px 60px;
        font-size: 4rem;
        margin-top: 30px;

    }

    header
    {
        height: 200px;
        padding: 40px;
    }

    .title, .logo
    {
        font-size: 5rem;
    }

    .nav_links
    {
        font-size: 3.2rem;
    }

    /* Movie information */
    .movie_image_holder
    {
        width: 560px;
        margin-bottom: 50px;
    }

    .movie_image
    {
        height: 900px;
    }

    .movie_name
    {
        font-size: 2.8rem;
    }

    .movie_info
    {
        font-size: 2.8rem;
    }

    .category_heading
    {
        font-size: 5rem;
    }

    .movie_main
    {
        height: 3000px;
        display: flex;
        flex-direction: column;
        align-items: center;
        padding: 20px 10px;
    }

    .serie_frame {
        width: 100%;
        max-width: 800px;
        height: auto;
        aspect-ratio: 16/9;
        border: 2px solid white;
    }

    .movie_frame, .serie_frame
    {
        margin-top: 300px;
        transform: scale(2.25);
    }

    .h1_movie_title, .h1_serie_title, #Ad_title
    {
        margin-top: 100px;
        font-size: 8rem;
        font-family: 'Quicksand', sans-serif;
    }

    .season_number_class
    {
        font-size: 6rem;
        font-family: 'Quicksand', sans-serif;
    }

    .serie_button_class
    {
        border: 6px solid #EB5E28;
        font-size: 4rem;
        margin: 20px 0;
        width: 100%;
        height: 180px;
        padding: 20px;
        font-family: 'Quicksand', sans-serif;
    }

    .text
    {
        font-size: 4rem;
        margin-top: 50px;
        font-family: 'Quicksand', sans-serif;
    }

    .download_link, .buttons_div_button {
        font-size: 3rem;
        font-family: 'Quicksand', sans-serif;
        padding: 20px 70px;
    }

}

/* Changing scroll bars for browsers */
/* Webkit Browsers */
::-webkit-scrollbar {
    width: 12px; /* Width of the vertical scrollbar */
    height: 12px; /* Height of the horizontal scrollbar */
  }
  
  ::-webkit-scrollbar-track {
    background: #000000; /* Light grey background */
    border-radius: 100%; /* Curved corners */
  }
  
  ::-webkit-scrollbar-thumb {
    background: #000000; /* Thumb color */
    border-radius: 100%; /* Curved corners */
  }
  
  ::-webkit-scrollbar-thumb:hover {
    background: #000000; /* Darker on hover */
  }
  
  ::-webkit-scrollbar-button {
    display: none; /* Removes arrows */
  }
  
  /* Firefox */
  html {
    scrollbar-color: #EB5E28 #000000; /* Thumb color and track color */
    scrollbar-width: thin; /* Makes the scrollbar thin */
  }
  
  

